--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body{
 
 #founder1{
     width: 100%;
-    max-width:auto;
+    max-width:500px;
     margin: 0px;
 }
 #founder1_aside{
@@ -97,6 +97,7 @@ body{
 #founder1_aside_p{
     font-family: 'Plus Jakarta Sans';
     font-size: 15px;
+    font-weight: 500;
 
 }
 #founder2{
@@ -114,6 +115,11 @@ body{
 #main_aside_founder2{
     order: 3;
 }
+#founder2_aside_2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #founder2_aside_h1{
     font-size: 25px;
     font-family: 'Plus Jakarta Sans';
@@ -125,13 +131,146 @@ body{
 #founder2_aside_p{
     font-family: 'Plus Jakarta Sans';
     font-size: 15px;
+    font-weight: 500;
+
+}
+#services_div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#services{
+    margin-top: 10px;
+    font-size: 30px;
+    font-family: 'Plus Jakarta Sans';
+    font-weight: 800;
+    color: #000536;
+    line-height: 1.1;
+
+}
+.card {
+    width: 100%;
+    height: 500px;
+    /* perspective: 1000px; */
+    display: flex;
+    /* align-items: center; */
+    margin-top: 10px;
+}
+
+.front,
+.back {
+    position: absolute;
+    width: 100%;
+    height: 250px;
+    backface-visibility: hidden;
+    border-radius: 30px;
+    box-shadow: #9f9c9c;
+    box-shadow: 20px 20px 10px grey;
 
 }
 
+.front {
+    background-color: #9f9c9c;
+    text-align: center;
+    transform: rotateY(0deg);
+    transition: transform 0.6s;
+}
 
+.back {
+    background-color: #ddd;
+    text-align: center;
+    transform: rotateY(180deg);
+    transition: transform 0.6s;
+}
 
+.card-flipped .front {
+    transform: rotateY(180deg);
+}
 
+.card-flipped .back {
+    transform: rotateY(0deg);
+}
 
+.flip-button {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #000536;
+    font-family:'Plus Jakarta Sans' ;
+    font-weight: 900;
+    border:none;
+    border-radius:20px ;
+    height: 25px;
+    background-color: transparent;
+    font-size: 18px;
+    height: 40px;
+}
+.flip-button1{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #000536;
+    font-family: 'Plus Jakarta Sans';
+    font-weight: 900;
+    border:none;
+    border-radius: 20px;
+    height: 25px;
+    background-color: transparent;
+    font-size: 18px;
+    height: 40px;
+}
+.card1{
+    display: flex;
+    align-items: center;
+
+}
+.flip-button:hover{
+    cursor: pointer;
+    background-color: #000536;
+    color: antiquewhite;
+    
+}
+.flip-button1:hover{
+    cursor: pointer;
+    background-color: #000536;
+    color: antiquewhite;
+}
+.front_h2 , .back_h2{
+    color:#000536;
+    font-family: 'Plus Jakarta Sans';
+    margin-top: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.front_p , .back_p{
+    color:#000536;
+    font-family: 'Plus Jakarta Sans';
+    font-weight: 500;
+    font-size: 15px;
+    margin-bottom: 20px;
+
+}
+.back_h2{
+    color: #000536;
+}
+#front_img{
+    width: 50%;
+    max-width: 250px;
+    height: 50%;
+    max-height: 200px;
+    border-radius: 100px;
+}
+.li_itms{
+    font-family: 'Plus Jakarta Sans';
+    font-size: 20px;
+
+}
+#back_p1{
+    display: none;
+}
 
 @media only screen and (min-width: 450px) {
 
@@ -164,6 +303,7 @@ body{
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: row;
         width: 100%;
         height: 700px;
     }
@@ -207,6 +347,7 @@ body{
     #main_aside_founder2{
         width: 50%;
         order: 1;
+        margin-left: 30px ;
     }
     #founder2_aside_h1 {
         font-size: 40px;
@@ -215,6 +356,44 @@ body{
         font-family: 'Plus Jakarta Sans';
         font-size: 20px;
     }
+    #services_info{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 500px;
+        
+    }
+    .card1{
+        width: 50%;
+        max-width: 500px;
+        height: 700px;
+    }
+    .card{
+        /* max-width: 500px; */
+        width: 50%;
+        align-items: center;
+    }
+    .front,
+    .back {
+        position: absolute;
+        width: 40%;
+        height: 370px;
+        backface-visibility: hidden;
+    }
+    #front_img{
+        margin-bottom: 20px;
+    }
+    .li_itms {
+        font-family: 'Plus Jakarta Sans';
+        font-size: 20px;
     
+    }
+    #back_p1 {
+        display: inline;
+        font-size: 20px;
+        font-weight: 500;
+    }
+
 }
 
