--- a/style.css
+++ b/style.css
@@ -10,19 +10,19 @@ body{
     height: 200px;
 }
 #name{
-    font-size: 40px;
+    
     display: inline;
     font-family: 'Plus Jakarta Sans';
-    font-size: 16px;
+    font-size: 40px;
     letter-spacing: 0px;
     font-weight: 600;
     color: #000536;
 }
 
 #logo{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
     transition: 2s;
 }
 #navbar{
@@ -50,6 +50,7 @@ body{
     font-family: 'Plus Jakarta Sans';
     transition: 1.2s;
     text-decoration: none;
+    scroll-behavior: smooth;
 
 }
 
